--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						<img src="images/meat_lovers.png" class="itemImg" alt="Image of a meat pizza" />
 						<div class="itemContainer">
 							<h3>🍖Meat Lovers Pizza🥓</h3>
-							<p>Filled to the brim with all the meats you could want!</p>
+							<p>Stuff your mouth with Jesse's large juicy meat!</p>
 						</div>
 					</div>
 
