--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <main role="main" class="pb-3">
             <body>
 				<header class="hero"></header>
-				<p class="quote">"It's all about the faimly!"<br /> - Jesse S. - Founder</p>
+				<p class="quote">"It's all about the family!"<br /> - Jesse S. - Founder</p>
 
 				<h2 class="dailyTitle">Daily Specials</h2>
 				<div class="dailySpecial">
